tests/models/enum/named/unit/fail/max_items.stderr
error: Support condition is alias, default
 --> tests/models/enum/named/unit/fail/max_items.rs:6:9
  |
6 |         value: ()
  |         ^^^^^
